--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div id="contador">0</div>
     <button onclick="incrementar()">Incrementar</button>
     <button onclick="reiniciar()">Reiniciar</button>
+    <button onclick="disminuir()">Disminuir</button>
 
     <script>
       let cuenta = 0;
@@ -39,6 +40,10 @@
         contador.textContent = cuenta;
       }
 
+      function disminuir() {
+        cuenta--;
+        contador.textContent = cuenta;
+      }
       function reiniciar() {
         cuenta = 0;
         contador.textContent = cuenta;
